test/integration/bad/reduce_sum/stanc.expected
  $ ../../../../../install/default/bin/stanc bad_args_length_mismatch.stan
Semantic error in 'bad_args_length_mismatch.stan', line 12, column 12 to column 42:
   -------------------------------------------------
    10:  
    11:  model {
    12:    target += reduce_sum(my_func, a, 1, 0.0);
                     ^
    13:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'reduce_sum':
(<F1>, array[] real, int, real)
where F1 = (array[] real, int, int, real, real) => real
Available signatures:
(<F1>, array[] real, int, real, real) => real
  Expected 5 arguments but found 4 arguments.
  $ ../../../../../install/default/bin/stanc bad_args_length_mismatch2.stan
Semantic error in 'bad_args_length_mismatch2.stan', line 12, column 12 to column 47:
   -------------------------------------------------
    10:  
    11:  model {
    12:    target += reduce_sum(my_func, a, 1, 0.0, 0.0);
                     ^
    13:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'reduce_sum':
(<F1>, array[] real, int, real, real)
where F1 = (array[] real, int, int, real) => real
Available signatures:
(<F1>, array[] real, int, real) => real
  Expected 4 arguments but found 5 arguments.
  $ ../../../../../install/default/bin/stanc bad_args_length_mismatch2_static.stan
Semantic error in 'bad_args_length_mismatch2_static.stan', line 12, column 12 to column 54:
   -------------------------------------------------
    10:  
    11:  model {
    12:    target += reduce_sum_static(my_func, a, 1, 0.0, 0.0);
                     ^
    13:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'reduce_sum_static':
(<F1>, array[] real, int, real, real)
where F1 = (array[] real, int, int, real) => real
Available signatures:
(<F1>, array[] real, int, real) => real
  Expected 4 arguments but found 5 arguments.
  $ ../../../../../install/default/bin/stanc bad_args_length_mismatch_static.stan
Semantic error in 'bad_args_length_mismatch_static.stan', line 12, column 12 to column 49:
   -------------------------------------------------
    10:  
    11:  model {
    12:    target += reduce_sum_static(my_func, a, 1, 0.0);
                     ^
    13:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'reduce_sum_static':
(<F1>, array[] real, int, real)
where F1 = (array[] real, int, int, real, real) => real
Available signatures:
(<F1>, array[] real, int, real, real) => real
  Expected 5 arguments but found 4 arguments.
  $ ../../../../../install/default/bin/stanc bad_fun_1.stan
Semantic error in 'bad_fun_1.stan', line 12, column 12 to column 39:
   -------------------------------------------------
    10:  
    11:  model {
    12:    target += reduce_sum(my_func_0, a, 1);
                     ^
    13:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'reduce_sum':
(<F1>, array[] real, int)
where F1 = (array[] real, int) => real
Available signatures:
(<F2>, array[] real, int) => real
where F2 = (array[] real, data int, data int) => real
  The first argument must be
   (array[] real, data int, data int) => real
  but got
   (array[] real, int) => real
  These are not compatible because:
    One takes 2 arguments but the other takes 3 arguments.
  $ ../../../../../install/default/bin/stanc bad_fun_1_static.stan
Semantic error in 'bad_fun_1_static.stan', line 12, column 12 to column 46:
   -------------------------------------------------
    10:  
    11:  model {
    12:    target += reduce_sum_static(my_func_0, a, 1);
                     ^
    13:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'reduce_sum_static':
(<F1>, array[] real, int)
where F1 = (array[] real, int) => real
Available signatures:
(<F2>, array[] real, int) => real
where F2 = (array[] real, data int, data int) => real
  The first argument must be
   (array[] real, data int, data int) => real
  but got
   (array[] real, int) => real
  These are not compatible because:
    One takes 2 arguments but the other takes 3 arguments.
  $ ../../../../../install/default/bin/stanc bad_fun_first_arg.stan
Semantic error in 'bad_fun_first_arg.stan', line 12, column 12 to column 42:
   -------------------------------------------------
    10:  
    11:  model {
    12:    target += reduce_sum(my_func, a, 1, 0.0);
                     ^
    13:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'reduce_sum':
(<F1>, array[] real, int, real)
where F1 = (array[] real, real, int, real, real) => real
Available signatures:
(<F2>, array[] real, int) => real
where F2 = (array[] real, data int, data int) => real
  The first argument must be
   (array[] real, data int, data int) => real
  but got
   (array[] real, real, int, real, real) => real
  These are not compatible because:
    The types for the second argument are incompatible: one is
     real
    but the other is
     int
  $ ../../../../../install/default/bin/stanc bad_fun_first_arg_static.stan
Semantic error in 'bad_fun_first_arg_static.stan', line 12, column 12 to column 49:
   -------------------------------------------------
    10:  
    11:  model {
    12:    target += reduce_sum_static(my_func, a, 1, 0.0);
                     ^
    13:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'reduce_sum_static':
(<F1>, array[] real, int, real)
where F1 = (array[] real, real, int, real, real) => real
Available signatures:
(<F2>, array[] real, int) => real
where F2 = (array[] real, data int, data int) => real
  The first argument must be
   (array[] real, data int, data int) => real
  but got
   (array[] real, real, int, real, real) => real
  These are not compatible because:
    The types for the second argument are incompatible: one is
     real
    but the other is
     int
  $ ../../../../../install/default/bin/stanc bad_fun_second_arg.stan
Semantic error in 'bad_fun_second_arg.stan', line 12, column 12 to column 42:
   -------------------------------------------------
    10:  
    11:  model {
    12:    target += reduce_sum(my_func, a, 1, 0.0);
                     ^
    13:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'reduce_sum':
(<F1>, array[] real, int, real)
where F1 = (array[] real, int, real, real, real) => real
Available signatures:
(<F2>, array[] real, int) => real
where F2 = (array[] real, data int, data int) => real
  The first argument must be
   (array[] real, data int, data int) => real
  but got
   (array[] real, int, real, real, real) => real
  These are not compatible because:
    The types for the third argument are incompatible: one is
     real
    but the other is
     int
  $ ../../../../../install/default/bin/stanc bad_fun_second_arg_static.stan
Semantic error in 'bad_fun_second_arg_static.stan', line 12, column 12 to column 49:
   -------------------------------------------------
    10:  
    11:  model {
    12:    target += reduce_sum_static(my_func, a, 1, 0.0);
                     ^
    13:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'reduce_sum_static':
(<F1>, array[] real, int, real)
where F1 = (array[] real, int, real, real, real) => real
Available signatures:
(<F2>, array[] real, int) => real
where F2 = (array[] real, data int, data int) => real
  The first argument must be
   (array[] real, data int, data int) => real
  but got
   (array[] real, int, real, real, real) => real
  These are not compatible because:
    The types for the third argument are incompatible: one is
     real
    but the other is
     int
  $ ../../../../../install/default/bin/stanc bad_fun_slice_and_slice_dont_match.stan
Semantic error in 'bad_fun_slice_and_slice_dont_match.stan', line 12, column 12 to column 42:
   -------------------------------------------------
    10:  
    11:  model {
    12:    target += reduce_sum(my_func, a, 1, 0.0);
                     ^
    13:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'reduce_sum':
(<F1>, array[] vector, int, real)
where F1 = (array[] real, int, int, real, real) => real
Available signatures:
(<F1>, array[] real, int, real, real) => real
  Expected 5 arguments but found 4 arguments.
  $ ../../../../../install/default/bin/stanc bad_fun_slice_and_slice_dont_match_static.stan
Semantic error in 'bad_fun_slice_and_slice_dont_match_static.stan', line 12, column 12 to column 49:
   -------------------------------------------------
    10:  
    11:  model {
    12:    target += reduce_sum_static(my_func, a, 1, 0.0);
                     ^
    13:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'reduce_sum_static':
(<F1>, array[] vector, int, real)
where F1 = (array[] real, int, int, real, real) => real
Available signatures:
(<F1>, array[] real, int, real, real) => real
  Expected 5 arguments but found 4 arguments.
  $ ../../../../../install/default/bin/stanc bad_non_matching_arg_types.stan
Semantic error in 'bad_non_matching_arg_types.stan', line 16, column 14 to column 47:
   -------------------------------------------------
    14:  
    15:  model {
    16:      target += reduce_sum(my_func, a, 1, 0.0, b);
                       ^
    17:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'reduce_sum':
(<F1>, array[] real, int, real, int)
where F1 = (array[] real, real, int, int, real) => real
Available signatures:
(<F2>, array[] real, int) => real
where F2 = (array[] real, data int, data int) => real
  The first argument must be
   (array[] real, data int, data int) => real
  but got
   (array[] real, real, int, int, real) => real
  These are not compatible because:
    The types for the second argument are incompatible: one is
     real
    but the other is
     int
  $ ../../../../../install/default/bin/stanc bad_non_matching_arg_types2.stan
Semantic error in 'bad_non_matching_arg_types2.stan', line 16, column 14 to column 47:
   -------------------------------------------------
    14:  
    15:  model {
    16:      target += reduce_sum(my_func, a, 1, 0.0, b);
                       ^
    17:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'reduce_sum':
(<F1>, array[] real, int, real, array[] real)
where F1 = (array[] real, int, int, real, real) => real
Available signatures:
(<F1>, array[] real, int, real, real) => real
  The 5th argument must be real but got array[] real
  $ ../../../../../install/default/bin/stanc bad_non_matching_arg_types2_static.stan
Semantic error in 'bad_non_matching_arg_types2_static.stan', line 16, column 14 to column 54:
   -------------------------------------------------
    14:  
    15:  model {
    16:      target += reduce_sum_static(my_func, a, 1, 0.0, b);
                       ^
    17:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'reduce_sum_static':
(<F1>, array[] real, int, real, array[] real)
where F1 = (array[] real, int, int, real, real) => real
Available signatures:
(<F1>, array[] real, int, real, real) => real
  The 5th argument must be real but got array[] real
  $ ../../../../../install/default/bin/stanc bad_non_matching_arg_types3.stan
Semantic error in 'bad_non_matching_arg_types3.stan', line 13, column 14 to column 47:
   -------------------------------------------------
    11:  
    12:  model {
    13:      target += reduce_sum(my_func, a, 1, 0.0, b);
                       ^
    14:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'reduce_sum':
(<F1>, array[] real, int, real, vector)
where F1 = (array[] real, int, int, real, real) => real
Available signatures:
(<F1>, array[] real, int, real, real) => real
  The 5th argument must be real but got vector
  $ ../../../../../install/default/bin/stanc bad_non_matching_arg_types3_static.stan
Semantic error in 'bad_non_matching_arg_types3_static.stan', line 13, column 14 to column 54:
   -------------------------------------------------
    11:  
    12:  model {
    13:      target += reduce_sum_static(my_func, a, 1, 0.0, b);
                       ^
    14:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'reduce_sum_static':
(<F1>, array[] real, int, real, vector)
where F1 = (array[] real, int, int, real, real) => real
Available signatures:
(<F1>, array[] real, int, real, real) => real
  The 5th argument must be real but got vector
  $ ../../../../../install/default/bin/stanc bad_not_slice_type.stan
Semantic error in 'bad_not_slice_type.stan', line 12, column 12 to column 42:
   -------------------------------------------------
    10:  
    11:  model {
    12:    target += reduce_sum(my_func, a, 1, 0.0);
                     ^
    13:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'reduce_sum':
(<F1>, real, int, real)
where F1 = (array[] real, int, int, real, real) => real
Available signatures:
(<F1>, array[] real, int, real, real) => real
  Expected 5 arguments but found 4 arguments.
  $ ../../../../../install/default/bin/stanc bad_not_slice_type_static.stan
Semantic error in 'bad_not_slice_type_static.stan', line 12, column 12 to column 49:
   -------------------------------------------------
    10:  
    11:  model {
    12:    target += reduce_sum_static(my_func, a, 1, 0.0);
                     ^
    13:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'reduce_sum_static':
(<F1>, real, int, real)
where F1 = (array[] real, int, int, real, real) => real
Available signatures:
(<F1>, array[] real, int, real, real) => real
  Expected 5 arguments but found 4 arguments.
  $ ../../../../../install/default/bin/stanc bad_reduce_sum_multiple.stan
Semantic error in 'bad_reduce_sum_multiple.stan', line 27, column 18 to column 51:
   -------------------------------------------------
    25:     real p_sum_1 = reduce_sum(fun, param_y, 1);
    26:     print(y, " - ", p_sum_1);
    27:     real p_sum_2 = reduce_sum(fun, param_y, 1, y, y);
                           ^
    28:     print(y, " -- ", p_sum_2);
    29:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'reduce_sum':
(<F1>, array[] real, int, real, real)
where F1 = (array[] real, int, int) => real
Available signatures:
(<F1>, array[] real, int) => real
  Expected 3 arguments but found 5 arguments.
  $ ../../../../../install/default/bin/stanc bad_return_type.stan
Semantic error in 'bad_return_type.stan', line 12, column 12 to column 39:
   -------------------------------------------------
    10:  
    11:  model {
    12:    target += reduce_sum(my_func_0, a, 1);
                     ^
    13:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'reduce_sum':
(<F1>, array[] real, int)
where F1 = (array[] real, int, int) => int
Available signatures:
(<F2>, array[] real, int) => real
where F2 = (array[] real, data int, data int) => real
  The first argument must be
   (array[] real, data int, data int) => real
  but got
   (array[] real, int, int) => int
  The return types are not compatible.
  $ ../../../../../install/default/bin/stanc bad_return_type_static.stan
Semantic error in 'bad_return_type_static.stan', line 12, column 12 to column 46:
   -------------------------------------------------
    10:  
    11:  model {
    12:    target += reduce_sum_static(my_func_0, a, 1);
                     ^
    13:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'reduce_sum_static':
(<F1>, array[] real, int)
where F1 = (array[] real, int, int) => int
Available signatures:
(<F2>, array[] real, int) => real
where F2 = (array[] real, data int, data int) => real
  The first argument must be
   (array[] real, data int, data int) => real
  but got
   (array[] real, int, int) => int
  The return types are not compatible.
  $ ../../../../../install/default/bin/stanc bad_suffix.stan
Semantic error in 'bad_suffix.stan', line 27, column 12 to line 28, column 45:
   -------------------------------------------------
    25:    beta[2] ~ normal(0, 1);
    26:  
    27:    target += reduce_sum(partial_sum_lp, n_redcards, grainsize,
                     ^
    28:                         n_games, rating, beta);
    29:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'reduce_sum':
(<F1>, array[] int, int, array[] int, vector, vector)
where F1 = (array[] int, int, int, array[] int, vector, vector) => real
Available signatures:
(<F2>, array[] int, int) => real
where F2 = (array[] int, data int, data int) => real
  The first argument must be a pure function but got an _lp function. These function types are not compatible.
  $ ../../../../../install/default/bin/stanc bad_userdefined_reduce_sum.stan
Semantic error in 'bad_userdefined_reduce_sum.stan', line 2, column 7 to column 17:
   -------------------------------------------------
     1:  functions {
     2:    real reduce_sum(real a){
                ^
     3:        return a;
     4:    }
   -------------------------------------------------

Identifier 'reduce_sum' clashes with a non-overloadable Stan Math library function.
  $ ../../../../../install/default/bin/stanc bad_userdefined_reduce_sum_static.stan
Semantic error in 'bad_userdefined_reduce_sum_static.stan', line 2, column 7 to column 24:
   -------------------------------------------------
     1:  functions {
     2:    real reduce_sum_static(real a){
                ^
     3:        return a;
     4:    }
   -------------------------------------------------

Identifier 'reduce_sum_static' clashes with a non-overloadable Stan Math library function.
